# flashpool-protocol

./: .gitattributes  .gitignore  README.md  next.config.js  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/admin/: page.tsx
app/api/passkey/[[...route]]/: route.ts
app/campaign/[id]/: page.tsx
app/campaign/new/: page.tsx
app/explore/: page.tsx
app/rewards/: page.tsx
components/: stats-card.tsx
components/campaign/: campaign-card.tsx  campaign-detail-skeleton.tsx  campaign-detail.tsx  campaign-form.tsx  campaign-grid-skeleton.tsx  campaign-grid.tsx  campaign-performance-chart.tsx  campaign-stats.tsx  campaign-timeline.tsx  deposit-panel.tsx
components/layout/: footer.tsx  navbar.tsx  page-header.tsx
components/rewards/: rewards-counter.tsx  rewards-pool-card.tsx  rewards-timeline.tsx
components/ui/: filter.tsx  glass-panel.tsx  gradient-title.tsx  input.tsx  neon-glow.tsx  pulse-grid.tsx  stepper.tsx
contracts/: Cargo.toml  Readme.md  bpssim.html  bpssim.js
contracts/account/: Cargo.toml
contracts/account/src/: lib.rs
contracts/external_contracts/passkey-kit/example-contract/src/: lib.rs
contracts/external_contracts/passkey-kit/smart-wallet-interface/src/: lib.rs  types.rs
contracts/external_contracts/passkey-kit/smart-wallet/src/: context.rs  lib.rs  signer.rs  types.rs  verify.rs
contracts/external_contracts/passkey-kit/smart-wallet/src/tests/: test_extra.rs
contracts/external_contracts/passkeys/factory/: Cargo.toml
contracts/external_contracts/passkeys/factory/src/: lib.rs
contracts/external_contracts/passkeys/webauthn/: Cargo.toml
contracts/external_contracts/passkeys/webauthn/src/: base64_url.rs
contracts/external_contracts/soroswap/factory/: Cargo.toml
contracts/external_contracts/soroswap/factory-interface/: Cargo.toml
contracts/external_contracts/soroswap/factory/src/: pair.rs  test.rs
contracts/external_contracts/soroswap/factory/src/test/: deterministic.rs
contracts/external_contracts/soroswap/pair/: Cargo.toml
contracts/external_contracts/soroswap/pair/src/: lib.rs  test.rs
contracts/external_contracts/soroswap/pair/src/test/: deposit.rs  events.rs  fee.rs  skim.rs  soroswap_pair_token.rs  swap.rs  sync.rs  withdraw.rs
contracts/external_contracts/soroswap/pair/src/test/unused_files/: helpers.rs  operations.rs
contracts/external_contracts/soroswap/token/src/: contract.rs  test.rs
contracts/flash_campaign_manager/: Cargo.toml
contracts/flash_campaign_manager/src/: lib.rs  rewards.rs  storage.rs  test.rs  utils.rs
contracts/flash_campaign_manager/src/tests/: log.rs  pair.rs  token.rs  utils.rs
contracts/flash_campaign_manager/test_snapshots/test/: create_and_join_campaign.1.json
hooks/: use-wallet.ts  usePasskeyClient.ts
lib/: constants.ts  freighter-provider.tsx  stellar-wallets-kit-provider.tsx  stellarwalletkit.tsx  utils.ts
