[workspace]
resolver = "2"

members = [
    "flash_campaign_manager",
    "external_contracts/soroswap/pair",
    "external_contracts/soroswap/factory-interface",
    "external_contracts/soroswap/token",
    "external_contracts/soroswap/factory"
]

[workspace.package]
version      = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
soroban-sdk        = { version = "22.0.8" }
soroban-token-sdk  = { version = "22.0.8" }

[profile.release]
opt-level       = "z"
codegen-units   = 1
lto             = true
strip           = "symbols"
overflow-checks = true
panic           = "abort"
debug           = 0
debug-assertions  = false

[profile.release-with-logs]
inherits          = "release"
debug-assertions  = true
