[package]
name       = "flash_campaign_manager"
# inherits version & rust-version from [workspace.package]
edition    = "2021"
publish    = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk       = { workspace = true }
soroban-token-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
