[package]
name = "soroswap-factory"
version = "0.0.2"
authors = ["esteblock <esteblock@paltalabs.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
num-integer = { version = "0.1.45", default-features = false, features = ["i128"] }
soroswap-factory-interface = { path = "../factory-interface", version = "0.0.1", package = "soroswap-factory-interface" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroswap-factory-interface = { path = "../factory-interface" }
